--- a/pages/movies/movies.wxss
+++ b/pages/movies/movies.wxss
@@ -3,3 +3,34 @@
 .container {
   background-color: #f2f2f2;
 }
+
+.search {
+  background-color: #f2f2f2;
+  height: 80rpx;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.search-img {
+  margin: auto 0 auto 20rpx
+}
+
+.search-close {
+  width: 30rpx;
+  height: 30rpx;
+  margin: auto 10rpx auto 0;
+}
+
+.search input {
+  height: 100%;
+  width: 600rpx;
+  margin-left: 20px;
+  font-size: 28rpx;
+}
+
+.searchPh {
+  font-size: 28rpx;
+  color: #d1d1d1;
+  margin-left: 20rpx;
+}
