--- a/pages/posts/post-temp/post-item-template.wxss
+++ b/pages/posts/post-temp/post-item-template.wxss
@@ -45,7 +45,7 @@
 .post-content {
   color: #666;
   font-size: 26rpx;
-  margin: 0 0 20rpx 20rpx;
+  margin: 0 10rpx 20rpx 20rpx;
   letter-spacing: 2rpx;
   line-height: 40rpx;
 }
